@startuml

title US 010 - As as As an Administrator, I want to deactivate a sensor in a geographical area, so that it will no longer be used.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
   FontSize 12
}


class SensorSettingsWebController
class GeographicAreaRepository
class GeographicAreaDTO
class GeographicAreaMapper

SensorSettingsWebController -- GeographicAreaRepository : >
GeographicAreaRepository -- GeographicAreaDTO : >
GeographicAreaRepository -- GeographicAreaMapper : >



class SensorSettingsWebController {
deactivateAreaSensor(@PathVariable long, @PathVariable String)
}

class GeographicAreaRepository{
getDTOById(long)
getAreaSensorByID(long, long)
updateAreaDTO(GeographicAreaDTO)
}

class GeographicAreaDTO{
deactivateSensorDTO(GeographicAreaDTO, AreaSensorDTO)
getAreaSensorByID(String)
}


class GeographicAreaMapper {
dtoToObject(GeographicAreaDTO)
}

@enduml